# Goldsteal

./: .gitignore  CMakeLists.txt  Goldsteal.descr  Makefile  README.md  TMXRules.txt  hui.cpp  main.cpp  res  try.cpp
boost_geo/: Geometry.h  MyGeometry.h  Util.cpp  a.cpp  tmp.cpp
my_geo/: a.cpp  tests.cpp  todo.txt
resources/textures/: body1.xcf  body_half_left_step.xcf  body_half_right_step.xcf  body_left_step.xcf  body_right_step.xcf
src/: Geometry.h  InputData.cpp  InputData.h  main.cpp  main1.cpp  micropather.cpp  try.cpp
src/geometry/: Boosting.h  Geometry.cpp  Geometry.h  GeometryOld.cpp  GeometryOld.h  Int.h  VisibilityPolygon.cpp  newGeometry.h  newVisibilityPolygon.cpp  tests.cpp  tmp.cpp  wrong.txt
src/model/: BrainPlayerInput.h  Camera.cpp  Camera.h  Environment.cpp  Environment.h  FlashLight.cpp  FlashLight.h  Forward.h  GameState.cpp  GameState.h  Graph.h  Hero.cpp  Hero.h  IBody.cpp  IBody.h  IBrain.h  IObject.cpp  IObject.h  IReal.h  IRenderable.h  IStaticObject.h  LightSource.cpp  LightSource.h  Renderer.cpp  Renderer.h  SimpleObject.cpp  SimpleObject.h  SimpleObstacle.cpp  SimpleObstacle.h  Stuff.h  Vertex.h  tmp.cpp
src/modelold/: Camera.cpp  Camera.h  Environment.h  FlashLight.h  GameState.h  IBody.cpp  IBody.h  IObject.cpp  LightSource.cpp
src/render/: BodyData.h  EnvironmentData.h  RenderBody.cpp  RenderData.h  RenderEnvironment.cpp  RenderGameState.cpp  RenderLightSource.cpp  RenderSimpleObject.cpp  RenderSimpleObstacle.cpp  SimpleObjectData.h  SimpleObstacleData.h  help.h
src/tryFire/: Makefile  main.cpp
src/utils/: ITileSet.h  (+5 more)
(+22 files in other folders)
